fix alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -339,7 +339,7 @@ ul, ol
 {
 	background: url(images/wing-project.png) center no-repeat;
 	float: left;
-	height: 40px;
+	height: 30px;
 	margin-left: 10px;
 	padding-top: 4px;
 	width: 240px;
